--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-    - '**.cs'
-    - '**.csproj'
+    - '**/*.cs'
+    - '**/*.csproj'
 
 env:
   DOTNET_VERSION: '7.0.x' # The .NET SDK version to use
