Fixed yaml (real)

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,7 +29,8 @@ jobs:
 
     - name: Install dependencies
       run: dotnet restore
-      
+      working-directory: 1260CICD/BankAccount
+
     - name: Build
       run: dotnet build --configuration Release --no-restore
     
